--- a/assets/stylesheets/foundation.css
+++ b/assets/stylesheets/foundation.css
@@ -1306,7 +1306,7 @@ blockquote p {
     display: inherit !important; } }
 button, .button, .multipleTemplateAdder {
   border-style: solid;
-  border-width: 1px;
+  border-width: 0px;
   cursor: pointer;
   font-family: inherit;
   font-weight: bold;
